[package]
name = "gone"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.2", features = ["derive"] }
env_logger = "0.9"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19", features = ["rt-multi-thread", "macros", "fs"] }

[dev-dependencies]
mockall = "0.11"
